[gd_scene load_steps=6 format=3 uid="uid://ca1fgc25b6y4t"]

[ext_resource type="Texture2D" uid="uid://cp1xoypqkqwnm" path="res://assets/sprites/farm objects free.png" id="1_n0qps"]
[ext_resource type="Script" path="res://scenes/trees.gd" id="1_wt4ic"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6wqyn"]
size = Vector2(2.43902, 1.48148)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_haccs"]
radius = 0.185901
height = 0.617284

[sub_resource type="CircleShape2D" id="CircleShape2D_dg57g"]
radius = 26.0768

[node name="Tree" type="StaticBody2D"]
script = ExtResource("1_wt4ic")

[node name="Mine" type="CollisionShape2D" parent="."]
position = Vector2(16, -4)
scale = Vector2(6.56, 5.4)
shape = SubResource("RectangleShape2D_6wqyn")

[node name="Mine2" type="CollisionShape2D" parent="."]
position = Vector2(16, -9)
scale = Vector2(43.0336, 29.16)
shape = SubResource("CapsuleShape2D_haccs")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(18, -6)
texture = ExtResource("1_n0qps")
region_enabled = true
region_rect = Rect2(102, 49, 35, 11)

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(18, -36)
texture = ExtResource("1_n0qps")
region_enabled = true
region_rect = Rect2(102, 0, 35, 49)

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(16, -9)
shape = SubResource("CircleShape2D_dg57g")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.128
one_shot = true

[node name="PositionNode" type="Node2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
